# Befunge-Rust

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: rust.yml
src/: befunge.rs  lib.rs  main.rs  world.rs
src/interpreter/: debug.rs  mod.rs  operations.rs  stack.rs
tests/integration/: interpreter_test.rs
www/: bootstrap.js  index.html  index.js  package-lock.json  package.json  webpack.config.js
