[package]
name = "befunge_rust"
version = "1.0.0"
authors = ["toming <tomingtoming@gmail.com>"]
edition = "2021"
description = "A Befunge-93 interpreter implementation in Rust"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rand = "0.5.0-pre.1"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
] }

# The `console_error_panic_hook` crate provides better debugging of panics when
# using wasm
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
